[package]
name = "spotify_link_extention_api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.2.8", features = ["headers"]}
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
rspotify = "0.11.2"
once_cell = "1.8.0"
async-session = "3.0.0"
async-redis-session = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
headers = "0.3.5"
tower = "0.4.10"
tower-http = {version ="0.1.1",features = ["set-header"]}